Fix:  FAQ list styles for improved responsive layout and alignment

--- a/style.css
+++ b/style.css
@@ -361,7 +361,6 @@ li::marker {
 
 .venue {
   grid-area: venue;
-  /* align-self: self-start; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -436,6 +435,9 @@ li::marker {
   background-color: #f4f4f8;
   border: 1px solid #e5e7eb;
   border-radius: 12px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .venue,
@@ -445,6 +447,11 @@ li::marker {
 
 .faq-list {
   padding-top: 1rem;
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  justify-self: center;
 }
 
 details {
